# contracts/core/v1/openapi.yaml
@@ -18,20 +18,8 @@ paths:
     get:
       operationId: ListProblems
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -160,20 +148,8 @@ paths:
     get:
       operationId: ListAdminContests
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -283,7 +259,6 @@ paths:
           description: OK
           content: {}
   /users/{username}/contests:
-
     get:
       operationId: ListUserContests
       parameters:
@@ -293,20 +268,8 @@ paths:
           schema:
             type: string
           example: user123
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -341,20 +304,8 @@ paths:
     get:
       operationId: ListWorkshopContests
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -393,20 +344,8 @@ paths:
     get:
       operationId: ListPublicContests
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -472,20 +411,8 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -704,20 +631,8 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: OK
@@ -934,20 +849,8 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: userId
           in: query
           schema:
@@ -1268,20 +1171,8 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-          example: 20
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: OK
@@ -1464,18 +1355,8 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          schema:
-            type: integer
-            format: int32
-            default: 1
-        - name: pageSize
-          in: query
-          schema:
-            type: integer
-            format: int32
-            default: 50
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: List of contest announcements
@@ -1560,18 +1441,8 @@ paths:
           in: query
           schema:
             type: string
-        - name: page
-          in: query
-          schema:
-            type: integer
-            format: int32
-            default: 1
-        - name: pageSize
-          in: query
-          schema:
-            type: integer
-            format: int32
-            default: 50
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: List of contest clarifications
@@ -1685,20 +1556,8 @@ paths:
     get:
       operationId: ListSubmissions
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: contestId
           in: query
           schema:
@@ -1772,20 +1631,8 @@ paths:
     get:
       operationId: ListUsers
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -1849,20 +1696,8 @@ paths:
           schema:
             type: string
           example: user123
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: contestId
           in: query
           schema:
@@ -2037,6 +1872,8 @@ paths:
                 avatar:
                   type: string
                   format: binary
+              required:
+                - avatar
       responses:
         "200":
           description: Avatar uploaded successfully
@@ -2048,6 +1885,8 @@ paths:
                   imgId:
                     type: string
                     format: uuid
+                required:
+                  - imgId
     delete:
       operationId: DeleteAvatar
       summary: Delete user avatar
@@ -2153,20 +1992,8 @@ paths:
           schema:
             type: string
             format: uuid
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-            default: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-            default: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: OK
@@ -3566,20 +3393,8 @@ paths:
       operationId: ListOrganizations
       summary: List organizations
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -3675,20 +3490,8 @@ paths:
           required: true
           schema:
             type: string
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: List of organization members
@@ -3963,20 +3766,8 @@ paths:
       operationId: ListNotifications
       summary: List user notifications
       parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 1
-        - name: pageSize
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 20
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: unread_only
           in: query
           required: false
@@ -4026,20 +3817,8 @@ paths:
       operationId: ListTeams
       summary: List teams
       parameters:
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: search
           in: query
           schema:
@@ -4142,20 +3921,8 @@ paths:
           schema:
             type: string
             format: uuid
-        - name: page
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 1
-        - name: pageSize
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          example: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: List of team members
@@ -4242,20 +4009,8 @@ paths:
           schema:
             type: string
             format: uuid
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 1
-        - name: pageSize
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: OK
@@ -4274,20 +4029,8 @@ paths:
           schema:
             type: string
             format: uuid
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 1
-        - name: pageSize
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
       responses:
         "200":
           description: OK
@@ -4300,18 +4043,8 @@ paths:
       operationId: ListPosts
       summary: Get a list of posts
       parameters:
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 1
-        - name: page_size
-          in: query
-          required: false
-          schema:
-            type: integer
-            default: 10
+        - $ref: "#/components/parameters/PageQuery"
+        - $ref: "#/components/parameters/PageSizeQuery"
         - name: sort_order
           in: query
           required: false
@@ -4652,6 +4385,28 @@ components:
       type: apiKey
       in: cookie
       name: session_id
+
+  parameters:
+    PageQuery:
+      name: page
+      in: query
+      description: "Page number"
+      schema:
+        type: integer
+        format: int32
+        default: 1
+        minimum: 1
+
+    PageSizeQuery:
+      name: pageSize
+      in: query
+      description: "Number of items per page"
+      schema:
+        type: integer
+        format: int32
+        default: 50
+        minimum: 1
+        maximum: 100
 
   schemas:
     Error:
@@ -7329,6 +7084,3 @@ components:
             $ref: "#/components/schemas/ContestClarificationModel"
         pagination:
           $ref: "#/components/schemas/PaginationModel"
-
-
-
